--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Gregory Schmidt Daniel",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.3",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
